--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body{
 	border-radius: 50%;
 } */
 
-/******************* 1st part of the order form *****************/
+/**************** 1st part of the order form *****************/
 
 .quantity{
 	width: 45px;
